--- a/AiTrainingCode.html
+++ b/AiTrainingCode.html
@@ -98,7 +98,7 @@
 		<p class="TitleList2Blue">Git</p>
 		<ol>
 		    <li>
-		    <p><a href="https://www.youtube.com/watch?v=gbNFcuCGffk" target="_blank">Git, GitHub, Copilot YouTube - installation and getting started video</a></p>
+		    <p><a href="https://www.youtube.com/watch?v=gbNFcuCGffk" target="_blank">Git and GitHub YouTube - installation and getting started video</a></p>
             <div class="preview-container">
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/gbNFcuCGffk" frameborder="0" allowfullscreen></iframe>
             </div>
