--- a/index.html
+++ b/index.html
@@ -60,26 +60,20 @@
 <p class="TitleList1Blue">Remarks</p>
 <ol>
 <li>GPT : GPT2 Karpathy</li>
-<li>GPT : Papers - GPT2, GPT3, mayabe explaining videos</li>
-<li>LLMA : LLAMA Umar x 2 +?</li>
-<li>Next...</li>
+<li>..</li>
+
+<li>Papers - GPT3, and explaining videos</li>
+<li>Papers - GPT4, mayabe explaining videos</li>
+<li>Papers - DeepSeek, mayabe explaining videos</li>
 <li>RLHF : DeepSeek Umar x 2 + paper +?</li>
 <li>...</li>
 
-<li>Git youTube</li>
-
-</ol>
-<ol>
-<li>-----</li>
+<li>LLMA : LLAMA Umar x 2 +?</li>
+<li>...</li>
 <li>Umar</li>
-<li>Papers - gpt 2-4, deep seek (also videos, ...)</li>
-<li>-----</li>
 <li>Watch later tubes</li>
-<li>Code - umar?</li>
-<li>Code - deep seek umar?, more?</li>
-<li>Code - more?</li>
-<li>-----</li>
 <li>Llama code and documents, Karpathy git, Umar video, ...</li>
+
 <li>-----</li>
 <li>Rag - videos, ...</il> 
 <li>Plugin - videos, ...</il> 
