--- a/index.html
+++ b/index.html
@@ -59,41 +59,64 @@
 	
 <p class="TitleList1Blue">Remarks</p>
 <ol>
-<li>GPT : GPT2 Karpathy</li>
-<li>..</li>
 
-<li>Papers - GPT3, and explaining videos</li>
-<li>Papers - GPT4, mayabe explaining videos</li>
-<li>Papers - DeepSeek, mayabe explaining videos</li>
-<li>RLHF : DeepSeek Umar x 2 + paper +?</li>
-<li>...</li>
+    <li>
+    <p class="TitleList2Blue">W2</p>
+    <ol>
+        <li>RLHF : Umar</li>
+        <li>DeepSeek : Umar x 2</li>
+        <li>Papers - DeepSeek, mayabe explaining videos</li>
+        <li>LLMA : LLAMA Umar x 2 + ?</li>
+    </ol>
+    </li>
 
-<li>LLMA : LLAMA Umar x 2 +?</li>
-<li>...</li>
-<li>Umar</li>
-<li>Watch later tubes</li>
-<li>Llama code and documents, Karpathy git, Umar video, ...</li>
+    <li>
+    <p class="TitleList2Blue">W2.5</p>
+    <ol>
+        <li>Umar</li>
+        <li>Watch later tubes</li>
+        <li>Go over again training</li>
+        <li>Desktop screenshots</li>
+    </ol>
+    </li>
+    
+    <li>
+    <p class="TitleList2Blue">W3</p>
+    <ol>
+        <li>Rag - videos, ...</il> 
+        <li>Plugin - videos, ...</il> 
+        <li>Fine tuning - papers, videos, ...</li>
+        <li>RLHF - papers, videos, ...</li>
+        <li>Reinforced leraning - papers, videos, ...</li>
+        <li>rule-based reward models (RBRMs)</li>
+        <li>More subjects</li> 
+        <li>g supervised learning (SFT), reward model (RM), PPO </li>
+        <li>Karpathy video last</li>
+        <li>New Think o3 o4 models</li>
+        <li>AGI</li>
+        <li>Bookmarks</li>
+    </ol>
+    </li>
 
-<li>-----</li>
-<li>Rag - videos, ...</il> 
-<li>Plugin - videos, ...</il> 
-<li>Fine tuning - papers, videos, ...</li>
-<li>RLHF - papers, videos, ...</li>
-<li>Reinforced leraning - papers, videos, ...</li>
-<li>More subjects</li>
-<li>Desktop screenshots</li>
-<li>Go over again training</li>
-<li>Karpathy video last</li>
-<li>Bookmarks</li>
-<li>-----</li>
-<li>My Project - build from others</li>
-<li>-----</li>
-<li>General news</li>
-<li>Market</li>
-<li>Ventures</li>
-<li>-----</li>
-<li>Choose subject</li>
+    <li>
+    <p class="TitleList2Blue">W4</p>
+    <ol>
+        <li>General news</li>
+        <li>Altman, Zokerberg, Mask</li>
+        <li>Market</li>
+        <li>Ventures</li>
+    </ol>
+    </li>
+
+    <li>
+    <p class="TitleList2Blue">W5</p>
+    <ol>
+        <li>Choose subject</li>
+        <li>My Project - build from others</li>
+    </ol>
 </ol>
+
+
 <br><br>	
 	
 </body>
