--- a/AiTrainingAdvancedModels.html
+++ b/AiTrainingAdvancedModels.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - Advanced</title>
+    <title>AI Training - Advanced Models</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -11,10 +11,10 @@
 <!----------------------------------------------------------------------------------------------->
 
 <body>
-    <p class="TitleHead">AI Training - Advanced</p>  
+    <p class="TitleHead">AI Training - Advanced Models</p>  
 	
-   <!--- Advanced Training - Models -->
-	<p class="TitleList1Blue">Advanced Training - Models</p>
+   <!--- Advanced Models Training -->
+	<p class="TitleList1Blue">Advanced Models Training</p>
     <ol>
 
 		<li>
@@ -145,8 +145,58 @@
         </ol>
 	    </li>
 
-<br>LLama
+	    <li>
+		<p class="TitleList2Blue">LLaMA</p>
+        <ol>
 
+
+
+			
+            <li>
+paper 1 2 3?
+			</li>
+
+
+
+			<li>
+			<p><a href="https://www.youtube.com/watch?v=E5OnoYF2oAk" target="_blank">LLaMA: Open and Efficient Foundation Language Models (Paper Explained) (Yannic Kilcher)</a></p>
+            <div class="preview-container">
+	        <iframe width="300" height="170" src="https://www.youtube.com/embed/E5OnoYF2oAk" frameborder="0" allowfullscreen></iframe>
+            </div>
+ 	     	<p>LLaMA 1 paper general explanation.</p>
+		    </li>
+
+
+
+
+			<li>
+video 2 
+
+ 	     	<p>LLaMA 1 Technolgy explanation.</p>
+
+			</li>
+
+
+
+			<li>
+video - for llama 2 or 3?
+
+
+			</li>
+
+
+
+			<li>
+video - code llama, here or in code?
+
+
+			</li>
+
+
+
+
+        </ol>
+	    </li>
 	
 		<li>
 		<p class="TitleList2Blue">BERT</p>
@@ -154,7 +204,7 @@
 			<li>
 		    <p><a href="https://www.youtube.com/watch?v=90mGPxR2GgY" target="_blank">BERT explained: Training, Inference, BERT vs GPT/LLamA, Fine tuning, [CLS] token (Umar Jamil)</a></p>
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/90mGPxR2GgY" frameborder="0" allowfullscreen></iframe>
-		    <p>BERT - basic differences explanation.</p>
+		    <p>BERT basic differences explanation.</p>
 		    </li>
 		</ol>
 		</li>
@@ -165,64 +215,13 @@
 			<li>
      		<p><a href="https://www.youtube.com/watch?v=UiX8K-xBUpE" target="_blank">Mistral / Mixtral Explained: Sliding Window Attention, Sparse Mixture of Experts, Rolling Buffer (Umar Jamil)</a></p>
 	        <iframe width="300" height="170" src="https://www.youtube.com/embed/UiX8K-xBUpE" frameborder="0" allowfullscreen></iframe>
-		    <p>Mistral - basic differences explanation.</p>
+		    <p>Mistral basic differences explanation.</p>
 		    </li>
 		</ol>
 		</li>
 
     </ol>
-  	
-<!----------------------------------------------------------------------------------------------->
-
-    <!--- Advanced Training - Code -->
-    <p class="TitleList1Blue">Advanced Training - Code</p>
-    <div class="video-container">
-    <ol>
-		<li>
-		<p class="TitleList2Blue">BatchNorm and optimization</p>
-		<ol>
-			<li>
-			<a href="https://www.youtube.com/watch?v=P6sfmUTpUmc" target="_blank">Building makemore Part 3: Activations & Gradients, BatchNorm (Andrej Karpathy)</a>
-            <div class="preview-container">
-	        <iframe width="300" height="170" src="https://www.youtube.com/embed/P6sfmUTpUmc" frameborder="0" allowfullscreen></iframe>
-            </div>
- 	        <p>Part 3: BatchNorm and optimization - Character generation example code.
- 	        <br>Note that we skip videos part 4 and part 5 - they are very optional.</p>
-		    </li>
-		</ol>
-		
-		<li>
-		<p class="TitleList2Blue">Tokenizer</p>
-        <ol>
-			<li>
-		    <a href="https://www.youtube.com/watch?v=zduSFxRajkE" target="_blank">Let's build the GPT Tokenizer (Andrej Karpathy)</a>
-            <div class="preview-container">
-	        <iframe width="300" height="170" src="https://www.youtube.com/embed/zduSFxRajkE" frameborder="0" allowfullscreen></iframe>
-            </div>
-			</li>
-		</ol>
-		</li>
-
-	    <li>
-		<p class="TitleList2Blue">GPT-2 (some GPT-3) and GPU optimization</p>
-        <ol>
-            <li>
-			<p><a href="https://www.youtube.com/watch?v=l8pRSuU81PU" target="_blank">Let's reproduce GPT-2 (124M) (Andrej Karpathy)</a></p>
-            <div class="preview-container">
-	        <iframe width="300" height="170" src="https://www.youtube.com/embed/l8pRSuU81PU" frameborder="0" allowfullscreen></iframe>
-            </div>
- 	     	<p>GPT-2 (some GPT-3) code and running with GPU optimization.</p>
-		    </li>
-
-	        <li>
-            <a href="https://github.com/karpathy/build-nanogpt" target="_blank">GitHub: github.com/karpathy/build-nanogpt</a>
-        	<p>GitHub of the above GPT-2 project.</p>
-            </li>
-        </ol>
-        </li>
-
-    </ol>
-    </div>
+ 	
 
 </body>
 </html>
