--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 		</li>
 
         <li>
-		<p><a href="AiTrainingAdvanced.html" target="_blank">AI Training - Advanced</a></p>
+		<p><a href="AiTrainingAdvancedModels.html" target="_blank">AI Training - Advanced Models</a></p>
         <div class="iframe-wrapper">
-        <iframe src="AiTrainingAdvanced.html"></iframe>
+        <iframe src="AiTrainingAdvancedModels.html"></iframe>
         </div>
 		</li>
 		
@@ -63,11 +63,11 @@
     <li>
     <p class="TitleList2Blue">W2</p>
     <ol>
-        <li>LLaMA : Umar</li>
-        <li>LLaMA : code Umar</li>
-        <li>LLaMA : more?</li>
+        <li>LLaMA : first video Umar</li>
         <li>LLaMA : llama 1 paper</li>
         <li>LLaMA : llama 2 paper</li>
+        <li>LLaMA : code video Umar</li>
+        <li>LLaMA : more?</li>
         <li>LLaMA : llama 3 paper</li>
     </ol>
     </li>
@@ -75,9 +75,7 @@
     <li>
     <p class="TitleList2Blue">W2.5</p>
     <ol>
-        <li>Umar</li>
         <li>Watch later tubes</li>
-        <li>Go over again training</li>
         <li>Desktop screenshots</li>
     </ol>
     </li>
@@ -85,27 +83,34 @@
     <li>
     <p class="TitleList2Blue">W3</p>
     <ol>
-        <li>Rag - videos, ...</il> 
+        <li>RAG - videos, ...</il> 
         <li>Plugin - videos, ...</il> 
         <li>Fine tuning - papers, videos, ...</li>
         <li>RLHF - papers, videos, ...</li>
         <li>RLHF : Umar</li>
         <li>Reinforced leraning - papers, videos, ...</li>
-        <li>rule-based reward models (RBRMs)</li>
-        <li>More subjects</li> 
-        <li>g supervised learning (SFT), reward model (RM), PPO </li>
-        <li>Karpathy video last</li>
-        <li>New Think o3 o4 models</li>
+        <li>supervised learning (SFT), PPO </li>
         <li>AGI</li>
+        <li>New Think o3 o4 models</li>
+    </ol>
+    </li>
+
+    <li>
+    <p class="TitleList2Blue">W3.5</p>
+    <ol>
+        <li>More subjects</li> 
+        <li>Karpathy video last</li>
         <li>Bookmarks</li>
     </ol>
     </li>
+
 
     <li>
     <p class="TitleList2Blue">W4</p>
     <ol>
         <li>General news</li>
-        <li>Altman, Zokerberg, Mask</li>
+        <li>Altman, Zokerberg, Musk</li>
+        <li>Aditional subjects</li> 
         <li>Market</li>
         <li>Ventures</li>
     </ol>
