--- a/AiTrainingCode.html
+++ b/AiTrainingCode.html
@@ -26,7 +26,7 @@
 		    </li>
             <li>Python Language
 	    	<p>You will need Python knowledge.
-			<br>The projects videos in the next section do teach the relevant Python (and you can use Google/YouTube/ChatGPT for more details),
+			<br>The projects videos in the next section do teach the relevant Python (and you can use Google/YouTube/ChatGPT/Gemini for more details),
 			<br>but it you have no knowledge of Python, it might be easier to start with some online course.</p>
     		</li>
         </ol>
