--- a/AiTrainingAdvancedCode.html
+++ b/AiTrainingAdvancedCode.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Training - Advanced Models</title>
+    <title>AI Training - Advanced Code</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css"> 
 </head>
@@ -14,7 +14,7 @@
     <p class="TitleHead">AI Training - Advanced Code</p>  
 
     <!--- Advanced Training - Code -->
-    <p class="TitleList1Blue">Advanced Training - Code</p>
+    <p class="TitleList1Blue">Advanced code Training - Base Models</p>
     <div class="video-container">
     <ol>
 		<li>
