--- a/AiTrainingModels.html
+++ b/AiTrainingModels.html
@@ -142,6 +142,11 @@
             </div>
  	     	<p>DeepSeek-R1 paper explanation.</p>
 		    </li>
+
+			<li>
+		    Basic Rotary Position scheme
+			<p><img src="images/RotaryPosition.png" alt="Numpy" width="300" style="border: 2px solid black;"></p>
+		    </li>
         </ol>
 	    </li>
 
@@ -185,13 +190,13 @@
 			
 
            <li>
-paper 2 3?
+paper 2
 			
 			</li>
 
 
 			<li>
-video - for llama 2 or 3?
+Paper 3?
 
 			</li>
 
@@ -208,9 +213,6 @@ video - code llama, here or in code?
 	    </li>
 
 		
-
-
-
 
 		
 		<li>
