--- a/index.html
+++ b/index.html
@@ -70,22 +70,24 @@
     <li>
     <p class="TitleList2Blue">W3</p>
     <ol>
-        <li>RLHF : Umar</li>
         <li>LLaMA 2 : llama 2 paper</li>
-
-        <li>.........</li>
-
         <li>LLaMA : llama 3 paper - maybe read a bit in general , and don't add even to list</li>
-        <li>LLaMA 2  : code video Umar</li>
+        <li>LLaMA 2  : code video Umar - maybe fast</li>
 
         <li>.........</li>
 
-        <li>RLHF - papers, videos, ...</li>
-        <li>RL - Reinforced leraning - papers, videos, ...</li>
-        <li>SFT -supervised learning</li>
-        <li>Fine tuning - papers, videos, ...</li>
-        <li>DPO - umar</li>
-
+        <li>RLHF</li>
+        <li>PPO</li>
+        <li>RL</li>
+        <li>SFT</li>
+        <li>Fine Tuning</li>
+        <li>DPO</li>
+        <li>.........</li>
+        <li>RAG</il> 
+        <li>Plugin</il> 
+        <li>.........</li>
+        <li>Desktop screenshots</li>
+        <li>Bookmarks</li>
 
     </ol>
     </li>
@@ -93,16 +95,12 @@
     <li>
     <p class="TitleList2Blue">W3</p>
     <ol>
-        <li>RAG - videos, ...</il> 
-        <li>Plugin - videos, ...</il> 
         <li>AGI</li>
         <li>New Think o3 o4 models</li>
         <li>Newist models</li>
-        <li>Watch later tubes</li>
-        <li>Desktop screenshots</li>
-        <li>More subjects</li> 
         <li>Karpathy video last</li>
-        <li>Bookmarks</li>
+        <li>More subjects</li> 
+
     </ol>
     </li>
 
