--- a/AiTrainingFineTuning.html
+++ b/AiTrainingFineTuning.html
@@ -14,23 +14,18 @@
     <p class="TitleHead">AI Training - Fine Tuning</p>  
 
     <!--- Fine Tuning -->
-    <p class="TitleList1Blue">Fine Tuning</p>
+    <p class="TitleList1Blue">Fine Tuning Training</p>
     <div class="video-container">
     <ol>
-		<li>
-		<p class="TitleList2Blue">RLHF and PPO</p>
-		<ol>
-			<li>
-			<a href="https://www.youxxxxxxxc" target="_blank">Building mxxxxxxxchNorm (Andrej Karpathy)</a>
-            <div class="preview-container">
-	        <iframe width="300" height="170" src="https://www.youtube.com/embed/xxxxxxx" frameborder="0" allowfullscreen></iframe>
-            </div>
- 	        <p>Partxxxxxxxple code.
- 	        <br>Note thxxxxxxxery optional.</p>
-		    </li>
+
+        <li>
+		<p class="TitleList2Blue">RLHF basics summary</p>
+     	<ol>
+  	    	<img src="images/RLHF1.png" alt="Numpy" width="600" style="border: 2px solid black;">
+  	    	<br><img src="images/RLHF2.png" alt="Numpy" width="600" style="border: 2px solid black;">
+  	    	<br><img src="images/RLHF3.png" alt="Numpy" width="600" style="border: 2px solid black;">
 		</ol>
 		</li>
-		
 
     </ol>
     </div>
